fixes h1 re-sizing on mobile

--- a/styles.css
+++ b/styles.css
@@ -13,14 +13,13 @@ html, body {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
         }
-/*Mobile First*/
 
+
+/*Mobile First*/
 
     .left {
       background-color: #F5F5F5;
-      height: auto;
       margin: 0 auto;
-      /*padding: 75px;*/
       min-height: 600px;
       text-align: center;
       position: relative;
@@ -29,6 +28,8 @@ html, body {
     .left-content {
       position: absolute;
       top: 50%;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
       transform: translateY(-50%);
     }
 
@@ -36,6 +37,13 @@ html, body {
       margin: 0 auto;
       height: auto;
       padding: 50px;
+    }
+
+    h1 {
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 50px;
+      width: 80%;
     }
 
     .highlight {
@@ -76,69 +84,47 @@ html, body {
         color: blue;
     }
 
+    /*sparkle*/
     .twa {
       background-image: url("img/sparkles.svg");
       height: 75px;
       width: 75px;
       margin: 0 auto;
      }
-/*TABLET 638*/
-
-@media (min-width: 453px) and (max-width: 767px) {
-
-  h1 {
-    padding-left: 50px;
-    padding-right: 50px;
-  }
-}
 
 /*DESKTOP*/
 @media (min-width: 768px) {
 
-/*left side styles */
+    /*left side styles */
 
-.left {
-  float: left;
-  position:fixed;
-  left:0;
-  top:0;
-  width: 50%;
-  height:100%;
-}
+    .left {
+      float: left;
+      position:fixed;
+      left:0;
+      top:0;
+      width: 50%;
+      height:100%;
+    }
 
-  .left-content {
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
+      .left-content {
+        position: relative;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
 
-h1 {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  width: 80%;
-}
+    /*right side styles*/
 
-.right {
-  float:right;
-  background-color: #fff;
-  position: fixed;
-  right:0;
-  top:0;
-  width: 50%;
-  height:100%;
-  overflow-y: scroll;
- }
+    .right {
+      float:right;
+      background-color: #fff;
+      position: fixed;
+      right:0;
+      top:0;
+      width: 50%;
+      height:100%;
+      overflow-y: scroll;
+     }
 
 }
-
-/*
-left div was
-padding 200px;
-min-height: 700px;
-
-right div>
-padding: 50px;
-*/
